# ic-canister-kit

./: .gitignore  .gitmodules  Cargo.toml  README.md  check.sh  deny.toml  rust-toolchain.toml
.github/workflows/: rust-ci.yml
examples/app/: .gitignore  Cargo.toml  README.md  dfx.json  rust-toolchain.toml  test.sh
examples/app/src/: business.rs
examples/app/src/common/: apis.rs
examples/app/src/stable/v000/: business.rs  types.rs
examples/app/src/stable/v001/: business.rs  types.rs  upgrade.rs
examples/stable/: Cargo.toml  README.md  dfx.json  test.sh
examples/stable/src/stable/: business.rs  common.rs  mod.rs
examples/stable/src/stable/v000/: business.rs  mod.rs  types.rs
examples/stable/src/stable/v001/: business.rs  mod.rs  types.rs  upgrade.rs
examples/storage/: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  test.sh
examples/storage/sources/: source.did
examples/storage/src/: business.rs  explore.rs  http.rs
examples/storage/src/common/: apis.rs
examples/storage/src/stable/: business.rs  common.rs
examples/storage/src/stable/v000/: business.rs  types.rs
examples/storage/src/stable/v001/: business.rs  mod.rs  types.rs  upgrade.rs
examples/storage/tests/: upload.rs
examples/storage/web/: index.html
examples/template/: Cargo.toml  README.md  test.sh
examples/template/sources/: source.did
examples/template/src/: business.rs
examples/template/src/common/: apis.rs  did.rs
examples/template/src/stable/: business.rs  common.rs  mod.rs
examples/template/src/stable/v000/: business.rs  types.rs
examples/template/src/stable/v001/: business.rs  permission.rs  types.rs  upgrade.rs
src/: bitcoin.rs  canister_call.rs  canister_managed.rs  canister_status.rs  cycles.rs  ecdsa.rs  http.rs  identity.rs  initial.rs  ledger.rs  lib.rs  logs.rs  maintainable.rs  mix.rs  pages.rs  permissions.rs  random.rs  results.rs  schnorr.rs  stable.rs  tasks.rs  times.rs  types.rs  uploads.rs
src/candid/: error.rs  mod.rs  parse.rs  test.rs  types.rs
src/canister/: call.rs  candid.rs  chunks.rs  codes.rs  common.rs  create.rs  cycles.rs  deploy.rs  life.rs  managed.rs  mod.rs  settings.rs  status.rs  types.rs
src/common/: mod.rs  once.rs  option.rs  pages.rs  result.rs  times.rs  trap.rs  types.rs
src/functions/: frozen.rs  initial.rs  mod.rs  pausable.rs  permission.rs  record.rs  schedule.rs  stable.rs  types.rs  upgrade.rs
src/nft/: limit.rs  mod.rs  storage.rs  ticket.rs  traits.rs  types.rs
src/nft/ext/: allowance.rs  batch.rs  common.rs  core.rs  custom.rs  mod.rs  non_fungible.rs  nonfungible.rs  state.rs  types.rs  utils.rs
src/number/: mix.rs  mod.rs  random.rs  types.rs
src/stable/: hashmap.rs  initial.rs  logs.rs  maintainable.rs  mod.rs  notifiable.rs  pausable.rs  permissable.rs  permission.rs  permissions.rs  record.rs  recordable.rs  schedule.rs  types.rs  upgrade.rs  uploads.rs
src/times/: mod.rs  schedulable.rs  schedule.rs  types.rs
src/token/: icrc1.rs  icrc2.rs  ledger.rs  mod.rs  types.rs
