[package]
name = "ic-canister-kit"
version = "0.3.21"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
description = "An ic canister package"
authors = ["Anubis"]
repository = "https://github.com/lazyanubis/ic-canister-kit"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[features]
default = ["common", "times", "identity", "canister", "number", "token"]
common = ["candid"]                                                      # 通用工具
times = ["ic-cdk"]                                                       # 时间相关
identity = ["candid", "ic-cdk", "sha2", "crc32fast", "hex"]              # 身份相关
canister = ["identity", "serde"]                                         # 罐子相关
number = ["canister", "base32"]                                          # 数字相关
token = ["canister", "ic-ledger-types"]                                  # 代币标准


# http
http = ["candid", "serde", "serde_json"] # http 相关

# 持久化
stable = ["candid"]
stable_initial = ["stable"]             # 初始化
stable_upgrade = ["stable"]             # 升级
stable_maintainable = ["stable"]        # 维护
stable_permissable = ["stable"]         # 权限
stable_recordable = ["stable"]          # 日志记录
stable_notifiable = ["stable", "times"] # 通知信息
stable_uploads = ["stable"]             # 分片上传
stable_hashmap = ["stable"]             # HashMap

# NFT相关
nft = ["identity"]   # NFT
nft_ext = ["nft"]    # NFT EXT 标准
nft_ticket = ["nft"] # NFT 是否具有门票功能
nft_limit = ["nft"]  # NFT 是否限制指定时间的功能
nft_traits = ["nft"] # NFT 的属性记录

# candid 类型
candid_type = []

all = [
    "common",
    "times",
    "identity",
    "canister",
    "number",
    "token",
    "http",
    "stable",
    "stable_initial",
    "stable_upgrade",
    "stable_maintainable",
    "stable_permissable",
    "stable_recordable",
    "stable_notifiable",
    "stable_uploads",
    "stable_hashmap",
    "nft",
    "nft_ext",
    "nft_ticket",
    "nft_limit",
    "nft_traits",
    "candid_type",
]


[dependencies]
candid = { version = "0.10", optional = true }
ic-cdk = { version = "0.13", optional = true }
ic-ledger-types = { version = "0.10", optional = true } # token 类型
ic-cdk-timers = { version = "0.7", optional = true }    # 定时器

sha2 = { version = "0.10", optional = true }     # hash
crc32fast = { version = "1.3", optional = true } # 循环校验
hex = { version = "0.4", optional = true }       # 16进制

base32 = { version = "0.4", optional = true } # base32 加密解密

serde = { version = "1", optional = true, features = ["derive"] } # 序列化/反序列化框架
serde_json = { version = "1", optional = true }                   # json
